examples/compiler_errors/header_counts/WarningMain.flx
import WarningOnly

fn main() -> Unit {
    let _x = WarningOnly.SomeInt(1)
}
